<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">AR Soulstorm</string>

    <string name="exit">Sign out</string>
    <string name="about">About</string>
    <string name="rating">Rating</string>
    <string name="clear">Clear</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="or_create_account_now">or Create account now!</string>
    <string name="login">Login</string>

    <string name="explore">Explore Augmentet Reality now!!</string>

    <string name="firebase">Firebase</string>
    <string name="defense">Defense</string>
    <string name="barrack">Barrack</string>
    <string name="station">Station</string>
    <string name="generator">Generator</string>
    <string name="monka">Monka</string>
    <string name="celouie">Celouie</string>
    <string name="kroot_facility">Kroot Facility</string>
    <string name="kaiune">Kaiune PC</string>
    <string name="landing_pad">Landing Pad</string>
    <string name="ship">Ship</string>
    <string name="back_to_login">Back to login screen</string>
    <string name="sign_up">Sign up</string>

    <string name="message_clear_building">Do you want to remove building?</string>
    <string name="message_clear_all">Do you want to remove all building and info?</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="clear">Clear</string>
</resources>
