<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:id="@+id/start"
        android:text="@string/clear"
        android:background="@drawable/drawable_menu_button_green"
        style="@style/MenuButton"/>

    <TextView
        android:id="@+id/rating"
        android:text="@string/rating"
        android:background="@drawable/drawable_menu_button_yellow"
        style="@style/MenuButton"/>

    <TextView
        android:id="@+id/about"
        android:text="@string/about"
        android:background="@drawable/drawable_menu_button_orange"
        style="@style/MenuButton"/>

    <TextView
        android:id="@+id/sign_out"
        android:text="@string/exit"
        android:background="@drawable/drawable_menu_button_red"
        style="@style/MenuButton"/>
</LinearLayout>
