<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/white"
    android:gravity="center"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/first_input"
        android:layout_width="200dp"
        android:layout_margin="6dp"
        android:layout_height="wrap_content"
        android:textColorHint="@color/colorAccentTint"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorAccentTint">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorAccentTint"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorAccent" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/second_input"
        android:layout_width="200dp"
        android:layout_margin="6dp"
        android:layout_height="wrap_content"
        android:textColorHint="@color/colorAccentTint"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorAccentTint">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorAccentTint"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/colorAccent" />
    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/login"
        android:layout_width="150dp"
        android:layout_margin="6dp"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:stateListAnimator="@animator/anim_button_login"
        android:background="@drawable/drawable_button_login"
        android:text="Login" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/google"
        android:layout_width="150dp"
        android:layout_margin="6dp"
        android:drawableStart="@drawable/ic_google"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:stateListAnimator="@animator/anim_button_login"
        android:background="@drawable/drawable_button_login"
        android:text="@string/sign_in" />

    <TextView
        android:id="@+id/forgot_password"
        android:text="@string/forgot_password"
        android:layout_margin="6dp"
        android:textColor="@color/backgroundDrawerGradient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/create_account"
        android:text="@string/or_create_account_now"
        android:layout_margin="6dp"
        android:textColor="@color/backgroundDrawerGradient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>